fix: prevent horizontal scrollbar jumping by setting width and overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,6 +74,10 @@
     scroll-behavior: smooth;
     scroll-padding-top: 2rem;
     line-height: 1.5;
+
+    /* fix for jumping scrollbar */
+    width:100vw;
+    overflow-x:hidden;
   }
 
   body {
